--- a/.github/workflows/terraform-cd.yml
+++ b/.github/workflows/terraform-cd.yml
@@ -82,6 +82,9 @@ jobs:
           bucket_infra = "${{ github.event.inputs.aws_backend_bucket }}"
           key_infra    = "easyorder-infra/terraform.tfstate"
           region = "${{ github.event.inputs.aws_region }}"
+          mysql_database = "easyorder_database_schema"
+          mysql_user = "easyorder_database_username"
+          mysql_password = "easyorder_database_password_10"
           EOF
     
     - name: Terraform Init
