--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -31,16 +31,16 @@ jobs:
       run: terraform init -backend=false
 
     - name: Terraform Validate
-      working-directory: src/terraform
+      working-directory: src/
       run: terraform validate
 
     - name: Terraform Security Check (tfsec)
       if: github.event_name == 'pull_request'
       uses: aquasecurity/tfsec-action@v1.0.0
       with:
-        working_directory: src/terraform
+        working_directory: src/
 
     - name: Check Formatting
-      working-directory: src/terraform
+      working-directory: src/
       run: terraform fmt -check
       
