fix: diretorio CI

--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -27,7 +27,7 @@ jobs:
       uses: hashicorp/setup-terraform@v2
     
     - name: Terraform Init
-      working-directory: src/terraform
+      working-directory: src/
       run: terraform init -backend=false
 
     - name: Terraform Validate
