--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -27,20 +27,20 @@ jobs:
       uses: hashicorp/setup-terraform@v2
     
     - name: Terraform Init
-      working-directory: src/
+      working-directory: src/terraform/
       run: terraform init -backend=false
 
     - name: Terraform Validate
-      working-directory: src/
+      working-directory: src/terraform/
       run: terraform validate
 
-    - name: Terraform Security Check (tfsec)
-      if: github.event_name == 'pull_request'
-      uses: aquasecurity/tfsec-action@v1.0.0
-      with:
-        working_directory: src/
+    # - name: Terraform Security Check (tfsec)
+    #   if: github.event_name == 'pull_request'
+    #   uses: aquasecurity/tfsec-action@v1.0.0
+    #   with:
+    #     working_directory: src/terraform/
 
     - name: Check Formatting
-      working-directory: src/
+      working-directory: src/terraform/
       run: terraform fmt -check
       
